# kido-timer-app

./: .gitignore  COM7_9600_20260210_183421.txt  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  app.rs  file_reader.rs  main.rs  probe.rs  protocol.rs  serial_reader.rs  styles.css  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  dto.rs  file_reader.rs  lib.rs  main.rs  protocol.rs  serial_reader.rs  state.rs
src-tauri/src/cloud/: client.rs  keychain.rs  kido.rs  mod.rs  state.rs  types.rs
src/components/: CloudPairingModal.tsx  CloudSection.tsx  CompetitionBanner.tsx  CompetitionPicker.tsx  ConfirmRunModal.tsx  Drawer.tsx  ErrorBanner.tsx  FailedPostsPanel.tsx  KidoConflictDialog.tsx  LaneAssignmentPanel.tsx  LaneCard.tsx  LaneGrid.tsx  ProtocolView.tsx  SetupModal.tsx  TopBar.tsx  UpdateBanner.tsx
src/lib/: cloudApi.ts  cloudTypes.ts  csv.ts  devSimulator.ts  format.ts  i18n.ts  persistence.ts  tauri.ts  types.ts  updater.ts  useCloud.ts  useConnection.ts  useUpdater.ts
