[package]
name = "kido-timer-app"
version = "0.1.0"
edition = "2021"
description = "KiDo-Timer dashboard"
authors = ["Drewis Dorner"]

[lib]
name = "kido_timer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
keyring = "3"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
time = { version = "0.3", features = ["formatting", "parsing", "serde-well-known", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
